==> yamgxu/Marlin/Marlin/src/HAL/ESP32/HAL.cpp <==
#include "../../inc/MarlinConfig.h"
#include <soc/adc_channel.h>
#include <soc/rtc.h>
#include <driver/adc.h>
#include <esp_adc_cal.h>
#include <HardwareSerial.h>
#include "USB.h"
  #include "wifi.h"
    #include "ota.h"
    #include "spiffs.h"
    #include "web.h"
#define V_REF 1100

int freeMemory() { return ESP.getFreeHeap(); }

void HAL_adc_init() {
  // Configure ADC//配置ADC
  adc1_config_width(ADC_WIDTH_BIT_13);

  // Configure channels only if used as (re-)configuring a pin for ADC that is used elsewhere might have adverse effects//仅当用作（重新）配置其他地方使用的ADC引脚时配置通道可能会产生不利影响
  TERN_(HAS_TEMP_ADC_0, adc1_set_attenuation(get_channel(TEMP_0_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_1, adc1_set_attenuation(get_channel(TEMP_1_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_2, adc1_set_attenuation(get_channel(TEMP_2_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_3, adc1_set_attenuation(get_channel(TEMP_3_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_4, adc1_set_attenuation(get_channel(TEMP_4_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_5, adc1_set_attenuation(get_channel(TEMP_5_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_6, adc2_set_attenuation(get_channel(TEMP_6_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_ADC_7, adc3_set_attenuation(get_channel(TEMP_7_PIN), ADC_ATTEN_11db));
  TERN_(HAS_HEATED_BED, adc1_set_attenuation(get_channel(TEMP_BED_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_CHAMBER, adc1_set_attenuation(get_channel(TEMP_CHAMBER_PIN), ADC_ATTEN_11db));
  TERN_(HAS_TEMP_COOLER, adc1_set_attenuation(get_channel(TEMP_COOLER_PIN), ADC_ATTEN_11db));
  TERN_(FILAMENT_WIDTH_SENSOR, adc1_set_attenuation(get_channel(FILWIDTH_PIN), ADC_ATTEN_11db));

  // Note that adc2 is shared with the WiFi module, which has higher priority, so the conversion may fail.//请注意，adc2与具有更高优先级的WiFi模块共享，因此转换可能会失败。
  // That's why we're not setting it up here.//这就是为什么我们不在这里设置它。

  // Calculate ADC characteristics (i.e., gain and offset factors for each attenuation level)//计算ADC特性（即每个衰减级别的增益和偏移因子）
  for (int i = 0; i < ADC_ATTEN_MAX; i++) {
    esp_adc_cal_characterize(ADC_UNIT_1, (adc_atten_t)i, ADC_WIDTH_BIT_13, V_REF, &characteristics[i]);

    // Change attenuation 100mV below the calibrated threshold//将衰减更改为低于校准阈值100mV
    // thresholds[i] = esp_adc_cal_raw_to_voltage(4095, &characteristics[i]);//阈值[i]=esp_adc_cal_raw_至_电压（4095，&特性[i]）；
  }
}

void HAL_adc_start_conversion(const uint8_t adc_pin) {
  const adc1_channel_t chan = get_channel(adc_pin);
  uint32_t mv;
  //esp_err_t err = esp_adc_cal_get_voltage((adc_channel_t)chan, &characteristics[attenuations[chan]], &mv);//esp_err_t err=esp_adc_cal_get_voltage（（adc_channel_t）chan，&特性[衰减[chan]，&mv）；

    uint32_t adcRead = analogRead(adc_pin);
    //SERIAL_ECHOPAIR("adcRead", adcRead);//序列回波对（“adcRead”，adcRead）；
    //SERIAL_ECHO("\r\n");//串行回波（“\r\n”）；
    double xadc = (adcRead +72.27488151 )/1.2664459692;
    //SERIAL_ECHO("xadc" );//串行回波（“xadc”）；
    //SERIAL_ECHOLN(xadc);//串行_-ECHOLN（xadc）；
    double vy = xadc/8191.0*3.6;
   // SERIAL_ECHO("vy" );//序列回波（“vy”）；
    //SERIAL_ECHOLN(vy);//序列号（vy）；
    double v47=3.6-vy;
    double rc=4.7/(v47/vy);
    double r=1.0/(1.0/rc-1.0/4.7);
    //print('测温电阻',1/(1/y-1/4.7));//打印（'测温电阻',1/（1/y-1/4.7））；
    //SERIAL_ECHO("r" );//序列回波（“r”）；
    //SERIAL_ECHOLN(r);//序列号_-ECHOLN（r）；
    double adc=1024/(4.7/r+1 ); //还原 adc//还原 模数转换器
    //SERIAL_ECHO("adc" );//串行回波（“adc”）；
    //SERIAL_ECHOLN(adc);//串行接口（adc）；
    //SERIAL_ECHO("\r\n");//串行回波（“\r\n”）；
    HAL_adc_result = (uint16_t )(adc);

   //  SERIAL_ECHO("HAL_adc_result" );//串行回波（“HAL_adc_结果”）；
   //SERIAL_ECHOLN(HAL_adc_result);//串行回波（HAL adc结果）；
  // Change the attenuation level based on the new reading//根据新读数更改衰减级别
  adc_atten_t atten;
  if (mv < 750)
    atten = ADC_ATTEN_DB_0;
  else if (mv > 750 && mv < 1050)
    atten = ADC_ATTEN_DB_2_5;
  else if (mv > 1050 && mv < 1300)
    atten = ADC_ATTEN_DB_6;
  else if (mv > 1300)
    atten = ADC_ATTEN_DB_11;
  else return;

  adc1_set_attenuation(chan, atten);
}
